tests/ui/async-await/await-keyword/2015-edition-warning.stderr
error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:8:13
   |
LL |     pub mod await {
   |             ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>
note: the lint level is defined here
  --> $DIR/2015-edition-warning.rs:5:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2018)]` implied by `#[deny(keyword_idents)]`

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:11:20
   |
LL |         pub struct await;
   |                    ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:16:16
   |
LL | use outer_mod::await::await;
   |                ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:16:23
   |
LL | use outer_mod::await::await;
   |                       ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:23:11
   |
LL |     match await { await => {} }
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-warning.rs:23:19
   |
LL |     match await { await => {} }
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2018/new-keywords.html>

error: aborting due to 6 previous errors

